# AzazelAssistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  main.cpp
src/: audio.h  commandList.cpp  configReader.cpp  configReader.h  configVars.h  dateTime.cpp  dateTime.h  functionCall.cpp  functionCall.h  inputAudio.cpp  model.cpp  model.h  mqtt.cpp  mqtt.h  mqttQueue.h  outputAudio.cpp  voice.cpp  voice.h
tests/: testAudioInputOutput.cpp  testConfigReader.cpp  testDateTime.cpp  testDateTime.h  testFunctionCall.cpp  testFunctionCall.h  testModel.cpp  testModel.h  testMqtt.cpp  testVoiceTTS.cpp  tests.cpp
